[package]
name = "ski_resort_tycoon"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.16.1"
bevy_egui = "0.34.1"
hexx = { version = "0.21.0", features = ["bevy"] }
noise = "0.9.0"
log = { version = "*", features = ["max_level_debug", "release_max_level_warn"] }

# https://bevy.org/learn/quick-start/getting-started/setup/#compile-with-performance-optimizations

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

# Enable more optimization in the release profile at the cost of compile time.
[profile.release]
# Compile the entire crate as one unit (slows compile times, marginal improvements).
codegen-units = 1
# Do a second optimization pass over the entire program, including dependencies (slows compile times, marginal improvements).
lto = "thin"

# Enables dynamic linking as a default option.
# Use `cargo build --release --no-default-features` to compile without dynamic linking.
# https://stackoverflow.com/a/69775641/13347795
[features]
default = ["fast-compile"]
fast-compile = ["bevy/dynamic_linking"]
